--- a/src/gallery-colorpicker/build.properties
+++ b/src/gallery-colorpicker/build.properties
@@ -17,7 +17,7 @@ component=gallery-colorpicker
 component.jsfiles=colorpicker.js
  
 # The list of modules this component. requires. Used to set up the Y.add module call for YUI 3.
-component.requires=node, event, widget, event-mouseenter
+component.requires=node, event, widget, classnamemanager
  
 # If your module has a skin file, set this flag to "true"
 #component.skinnable=false
